# Drift-Triage-Co-Pilot

./: .env.example  .gitignore  ARCH.md  BUGS.md  CLAUDE.md  DECISIONS.md  Makefile  README.md  RUNBOOK.md  demo_plan.md  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yaml  install_guide.md
.github/workflows/: ci.yml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 2d9b7f4e6a31_drift_webhook_state.py  7bbe47984efa_init_schema.py  b8b18f902dcf_init_schema.py  e4cdf274589c_add_drift_event_id_and_drift_report_id_.py
backend/scripts/: inject_drift.py
backend/src/agent/: graph.py  llm.py  main.py  reconcile.py  security.py  staleness.py
backend/src/agent/prompts/: action.md  comms.md  triage.md
backend/src/agent/routers/: admin.py  hil.py  investigations.py  queue.py  webhook.py
backend/src/agent/tools/: base.py  compose_summary.py  dispatch_action.py  inspect_drift.py  propose_action.py  replay_test.py  request_hil.py  retrain.py  rollback.py  update_dashboard.py
backend/src/core/: logging.py  models.py  settings.py
backend/src/drift/: chi2.py  output_drift.py  psi.py  severity.py
backend/src/ml/: data.py  inference.py  pipeline.py  reference_stats.py  register.py  schema.py  threshold.py  train.py
backend/src/service/: main.py
backend/src/service/routers/: drift.py  prediction.py  promotion.py  registry.py
backend/src/worker/: dedup.py  main.py  replay_test.py  retrain.py  rollback.py
backend/tests/: conftest.py  test_demo_batch_scripts.py  test_drift_math.py  test_drift_webhook_flow.py  test_inference_and_webhook.py  test_prediction.py  test_promotion.py  test_schemas.py
backend/tests/agent/: conftest.py  test_langsmith_config.py  test_trajectories.py  test_webhook.py
backend/tests/agent/snapshots/: high_severity_retrain_path.json
backend/tests/ml/: test_fidelity.py  test_inference.py
contracts/v1/: drift_webhook.json  promotion_request.json
frontend/: Dockerfile  app.py  pyproject.toml
infra/postgres/: init-pgvector.sql
infra/vault/: seed-secrets.sh
scripts/: generate_demo_batches.py  inject_demo_batch.py
src/ml/: data.py  inference.py  pipeline.py  schema.py  train.py
tasks/: ali.md  rayan.md
tests/: test_inference.py
