[project]
name = "drift-triage-dashboard"
version = "0.1.0"
description = "Streamlit dashboard for Drift Triage Co-Pilot"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.44.1",
    "streamlit-autorefresh==1.0.1",
    "plotly==5.24.1",
    "httpx==0.28.1",
    "pydantic==2.11.3",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
